# helmor

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  NIX_SETUP.md  PRODUCT.md  README.md  biome.json  flake.nix  helmor.json  index-web.html  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
knowledge-sidecar/: pyproject.toml
knowledge-sidecar/scripts/: build.mjs
knowledge-sidecar/src/helmor_knowledge_sidecar/: __init__.py  main.py
knowledge-sidecar/tests/: test_main.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agents.rs  background_agents.rs  browser_profile.rs  data_dir.rs  debug_ingest.rs  error.rs  global_hotkey.rs  goal_assignees.rs  goal_orchestration.rs  import.rs  lib.rs  mcp.rs  ngrok_config.rs  schema.rs  service.rs  shell_env.rs  sidecar.rs  skill_export.rs  system_limits.rs  terminal_profiles.rs  testkit.rs  tmux.rs  web_daemon.rs
src-tauri/src/agents/: action_kind.rs  catalog.rs  claude_project_files.rs  codex_profiles.rs  delegation.rs  persistence.rs  pi_models.rs  queries.rs  slash_commands.rs  support.rs
src-tauri/src/background_agents/: mod.rs  progress.rs
src-tauri/src/cli/: args.rs  data.rs  files.rs  github.rs  goal.rs  mod.rs  ngrok.rs  repo.rs  send.rs  session.rs  settings.rs  skills.rs  system.rs  workspace.rs
src-tauri/src/code_graph/: builder.rs  cache.rs  hash.rs  mod.rs  types.rs  walker.rs
src-tauri/src/commands/: agent_commands.rs  app_install_commands.rs  browser_commands.rs  code_graph_commands.rs  debug_ingest_commands.rs  editor_commands.rs  editors.rs  forge_commands.rs  github_commands.rs  goal_commands.rs  knowledge_commands.rs  mod.rs  repository_commands.rs  script_commands.rs  session_commands.rs  settings_commands.rs  system_commands.rs  terminal_commands.rs  workspace_commands.rs
src-tauri/src/data_dir/: bootstrap.rs  mod.rs  tests.rs
src-tauri/src/debug_ingest/: ngrok_tunnel.rs
src-tauri/src/forge/: accounts.rs  avatar_cache.rs  branch.rs  cli_status.rs  command.rs  detect.rs  mod.rs  provider.rs  status_cache.rs  types.rs  workspace.rs
src-tauri/src/git/: ops.rs  watcher.rs
src-tauri/src/goal_assignees/: mod.rs  notifications.rs  prompt.rs  report.rs  resolver.rs  storage.rs
src-tauri/src/goal_orchestrator/: config.rs  mod.rs  runner.rs  scheduler.rs  telemetry.rs  types.rs  workflow.rs  workspace_manager.rs
src-tauri/src/knowledge/: mod.rs
src-tauri/src/models/: browser_tabs.rs  db.rs  delegations.rs  goals.rs  mod.rs  repos.rs  sessions.rs  settings.rs  workspaces.rs
src-tauri/src/pipeline/: codex_collab.rs  file_change.rs  mod.rs  pi_tools.rs  types.rs
src-tauri/src/remote/: api.rs  config.rs  events.rs  http.rs  mod.rs  server.rs  static_files.rs
src-tauri/src/ui_sync/: events.rs  manager.rs  mod.rs  socket.rs
src-tauri/src/web/: mod.rs  server.rs
src-tauri/src/web_daemon/: mod.rs  network.rs
src-tauri/src/workspace/: branching.rs  goal_conversion.rs  goals.rs  helpers.rs  kind.rs  landing.rs  lifecycle.rs  mod.rs  remote.rs  scripts.rs  state.rs  workspaces.rs
src-tauri/tests/: agent_stream_event_wire.rs  pipeline_scenarios.rs  pipeline_streams.rs  schema_migrations.rs  stable_part_ids.rs  stream_bridge_elicitation.rs  stream_bridge_events.rs  streaming_send_params.rs
src-tauri/tests/common/: normalize.rs
src-tauri/tests/snapshots/: agent_stream_event_wire__wire_format_streaming_delta.snap  agent_stream_event_wire__wire_format_user_input_request_ask_user_question.snap  agent_stream_event_wire__wire_format_user_input_request_form.snap  agent_stream_event_wire__wire_format_user_input_request_url.snap  pipeline_scenarios__asst_delegation_anchor_historical.snap  pipeline_scenarios__asst_pi_generic_card_renders_extension_output.snap  pipeline_scenarios__codex_collab_close_agent.snap  pipeline_scenarios__codex_collab_in_progress_renders_empty_result.snap  pipeline_scenarios__codex_collab_spawn_agent_renders_with_nickname_and_role.snap  pipeline_scenarios__codex_collab_unknown_nickname_falls_back_to_thread_id.snap  pipeline_scenarios__codex_collab_wait_completed_collects_subagent_messages.snap  pipeline_scenarios__codex_pi_legacy_text_before_reasoning_reorders_by_matching_turn_id.snap  pipeline_scenarios__codex_pi_mcp_tool_call_text_result_renders_as_tool_output.snap  pipeline_scenarios__codex_pi_reasoning_item_renders_historical_collapsed_with_duration.snap  (+33 more)
(+666 files in other folders)
