[package]
name = "helmor"
version = "1.8.1"
description = "The local-first IDE for coding agent orchestration."
authors = ["Caspian Zhao", "Nathan Lian"]
edition = "2021"
default-run = "helmor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helmor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["protocol-asset", "test", "devtools", "unstable"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.11.0"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
notify = "7"
notify-debouncer-full = "0.4"
ngrok = "0.18.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-stream = "0.1"
futures-util = "0.3"
libsql = { version = "0.9.30", default-features = false, features = ["core"] }

# Code-graph: tree-sitter parsers for the diagram view.
# Each grammar crate is independently versioned; pin in Cargo.lock so a
# grammar update doesn't silently break the query strings in
# src/code_graph/parsers/*.
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
blake3 = "1"

# libc backs Unix process groups, signals, and PTY handling.
# Windows support will need platform-specific replacements before this can be gated.
[dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3"
security-framework-sys = "2"

[[bin]]
name = "helmor-cli"
path = "src/bin/helmor-cli.rs"

[[bin]]
name = "gen_pipeline_fixture"
path = "src/bin/gen_pipeline_fixture.rs"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "glob"] }
tempfile = "3"

# ---------------------------------------------------------------------------
# Dev profile: optimised for fastest compilation, not runtime performance.
# sccache is the cross-worktree cache; incremental is disabled because the
# two are mutually exclusive.
# ---------------------------------------------------------------------------
[profile.dev]
debug = "line-tables-only"   # keep backtraces, skip 80% of debug info
split-debuginfo = "unpacked" # skip dsymutil merge (macOS default, explicit)
opt-level = 0
codegen-units = 256          # max intra-crate parallelism
incremental = false          # required for sccache compatibility

[profile.dev.package."*"]
debug = false                # deps don't need debug info at all
opt-level = 0
codegen-units = 256

[profile.dev.build-override]
debug = false                # build scripts & proc-macros: fastest possible
opt-level = 0
codegen-units = 256
